--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
 
@@ -24,22 +25,24 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a class="active" href="">Home</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a class="active" href=""> <i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+        <li><a href=""> <i class="fa fa-book" aria-hidden="true"></i> About</a></li>
+        <li><a href=""> <i class="fa fa-telegram" aria-hidden="true"></i> Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+        <li><a href="#"> Sign Up <i class="fa fa-user-plus" aria-hidden="true"></i></a></li>
+        <li><a href="#"> Login <i class="fa fa-rocket" aria-hidden="true"></i></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
-</nav>
+    </nav>
 
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
           <div id="content">
-            <h1>Lunar</h1>
+            <h1>Lunar Liftoffs</h1>
+            <h2><i class="fa fa-rocket fa-5x" aria-hidden="true"></i></h2>
             <h3>Your Rocket to the Moon and Beyond.</h3>
             <hr>
             <button class="btn btn-default btn-lg">Lift Off</button>
